--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -28,7 +28,8 @@
     "superagent": "0.21.0",
     "underscore": "1.8.3",
     "underscore.string": "3.2.2",
-    "uuid": "2.0.3"
+    "uuid": "2.0.3",
+    "validator": "5.2.0"
   },
   "devDependencies": {
     "babel-core": "6.4.0",
@@ -76,7 +77,6 @@
     "stylelint-config-standard": "11.0.0",
     "tty-table": "1.0.7",
     "url-loader": "0.5.7",
-    "validator": "5.2.0 ",
     "wdio": "0.3.3",
     "wdio-jasmine-framework": "0.2.17",
     "wdio-junit-reporter": "0.2.0",
@@ -89,7 +89,7 @@
     "reselect": "2.x",
     "react": "0.13 - 0.14",
     "react-dom": "0.14",
-    "validator": "5.2.0 "
+    "validator": "5.2.0"
   },
   "engines": {
     "node": ">= 4.2.x",
