--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -29,6 +29,7 @@
     "recharts": "0.21.2",
     "react-tooltip": "^3.3.0",
     "superagent": "0.21.0",
+    "superagent": "3.5.2",
     "underscore": "1.8.3",
     "underscore.string": "3.2.2",
     "uuid": "2.0.3",
