UIP-1244 : add helpHints to selectionList items swap css-only help-hints for react-tooltip npm module
Change-Id: I49cbe846275f4dc661d50085be4c12d2add39c23

--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -25,6 +25,7 @@
     "re-react": "1.1.5",
     "react-dnd": "2.1.4",
     "react-dnd-html5-backend": "2.1.2",
+    "react-tooltip": "^3.3.0",
     "superagent": "0.21.0",
     "underscore": "1.8.3",
     "underscore.string": "3.2.2",
