UIP-1203 UIP-1171 UIP-1131: refactor and add check for improper use of bind in render & fix FormDropDownList to use re-react and UILib search
Change-Id: Ie1f1334a185fe616f10aef4c4b5947898cc09dec

--- a/packages/ui-library/.eslintrc
+++ b/packages/ui-library/.eslintrc
@@ -123,7 +123,8 @@
 		"react/no-unknown-property": [2],
 		"react/react-in-jsx-scope": [2],
 		"react/self-closing-comp": [1],
-		"react/wrap-multilines": [2]
+		"react/wrap-multilines": [2],
+		"react/jsx-no-bind": [2, { "ignoreRefs": true }]
 	},
 	"plugins": [
 		"react"
