--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -50,8 +50,10 @@
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
     "history": "^4.7.2",
+    "html-loader": "^0.5.1",
     "html-webpack-plugin": "2.9.0",
     "http-server": "0.9.0",
+    "isomorphic-fetch": "^2.2.1",
     "jasmine": "2.4.1",
     "jest-cli": "21.2.1",
     "jsdoc": "3.3.3",
@@ -59,6 +61,8 @@
     "jsdoc-jsx": "0.1.0",
     "json-loader": "0.5.4",
     "lcov-parse": "0.0.10",
+    "markdown-loader": "^2.0.1",
+    "markdown-to-jsx": "^5.4.2",
     "marked": "0.3.5",
     "node-sass": "4.3.0",
     "object-assign": "4.0.1",
