--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -98,8 +98,8 @@
   "peerDependencies": {
     "clone": "1.x",
     "reselect": "2.x",
-    "react": "15.3.0 || 16.0.0",
-    "react-dom": "15.3.0 || 16.0.0",
+    "react": "^15.3.0 || ^16.0.0",
+    "react-dom": "^15.3.0 || ^16.0.0",
     "validator": "5.2.0"
   },
   "engines": {
