add transform class properties to babelify comment out flaky calendar test Change-Id: I8ac0ffa036f66171bd862d7aa7666fe327f84944

--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -163,10 +163,13 @@
       [
         "babelify",
         {
-          "presets": [
-            "env",
-            "react"
-          ]
+            "presets": [
+                "env",
+                "react"
+            ],
+            "plugins": [
+                "transform-class-properties"
+             ]
         }
       ]
     ]
