add jsdoc back, fix error for jsdoc, upgrade jsdoc
Change-Id: I92088759c6d76a46ceaa0dbea1b58db594ec0589

--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -56,7 +56,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jasmine": "2.4.1",
     "jest-cli": "21.2.1",
-    "jsdoc": "3.3.3",
+    "jsdoc": "3.5.3",
     "jsdoc-babel": "^0.3.0",
     "jsdoc-jsx": "0.1.0",
     "json-loader": "0.5.4",
@@ -141,7 +141,7 @@
     "pack-landing": "webpack --progress --colors --config webpack.landing.config.js",
     "webpack-start-landing": "webpack-dev-server --content-base hosting/ -d --hot --port 8082 --host 0.0.0.0 --inline --progress --colors --config webpack.landing.config.js",
     "webpack-start": "webpack-dev-server -d --hot --host 0.0.0.0 --inline --progress --colors --config webpack.dev.config.js",
-    "start": "npm run webpack-start",
+    "start": "npm run doc && npm run webpack-start",
     "start-w-doc": "npm run doc && npm run webpack-start",
     "doc": "jsdoc -c ./jsdoc.json",
     "jslint": "eslint --ext .js,.jsx .",
