--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -10,21 +10,21 @@
     "url": "https://hg-od01.corp.pingidentity.com/r/gitweb?p=ui-library.git;a=tree;h=HEAD;hb=HEAD"
   },
   "dependencies": {
-    "babel-runtime": "^6.26.0",
+    "babel-runtime": "6.26.0",
     "classnames": "1.2.1",
-    "core-js": "^2.5.1",
+    "core-js": "2.5.1",
     "exif-js": "2.1.1",
     "fbjs": "0.4.0",
     "fix-orientation": "0.0.2",
     "moment": "2.11.1",
     "moment-range": "1.0.5",
     "moment-timezone": "0.5.5",
-    "raf": "^3.4.0",
+    "raf": "3.4.0",
     "re-mutable": "1.1.1",
-    "react-color": "^2.13.8",
+    "react-color": "2.13.8",
     "react-dnd": "2.5.4",
-    "react-dnd-html5-backend": "^2.5.4",
-    "react-tooltip": "^3.3.1",
+    "react-dnd-html5-backend": "2.5.4",
+    "react-tooltip": "3.3.1",
     "recharts": "1.0.0-beta.0",
     "superagent": "3.6.0",
     "underscore": "1.8.3",
@@ -33,13 +33,13 @@
     "validator": "5.2.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "babel-cli": "~6.26.0",
     "babel-core": "6.26.0",
     "babel-eslint": "8.0.1",
     "babel-loader": "6.4.1",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-external-helpers": "~6.22.0",
+    "babel-plugin-transform-class-properties": "~6.24.1",
+    "babel-plugin-transform-runtime": "~6.23.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "chalk": "1.1.3",
@@ -53,25 +53,25 @@
     "eslint-plugin-react": "4.1.0",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.0",
-    "gulp-debug": "^3.1.0",
-    "gulp-flatten": "^0.3.1",
-    "gulp-revert-path": "^1.2.1",
-    "history": "^4.7.2",
-    "html-loader": "^0.5.1",
+    "gulp": "~3.9.1",
+    "gulp-babel": "~7.0.0",
+    "gulp-debug": "~3.1.0",
+    "gulp-flatten": "~0.3.1",
+    "gulp-revert-path": "~1.2.1",
+    "history": "~4.7.2",
+    "html-loader": "~0.5.1",
     "html-webpack-plugin": "2.9.0",
     "http-server": "0.9.0",
-    "isomorphic-fetch": "^2.2.1",
+    "isomorphic-fetch": "~2.2.1",
     "jasmine": "2.4.1",
     "jest-cli": "21.2.1",
     "jsdoc": "3.5.3",
-    "jsdoc-babel": "^0.3.0",
+    "jsdoc-babel": "~0.3.0",
     "jsdoc-jsx": "0.1.0",
     "json-loader": "0.5.4",
     "lcov-parse": "0.0.10",
-    "markdown-loader": "^2.0.1",
-    "markdown-to-jsx": "^5.4.2",
+    "markdown-loader": "~2.0.1",
+    "markdown-to-jsx": "~5.4.2",
     "marked": "0.3.5",
     "node-sass": "4.3.0",
     "object-assign": "4.0.1",
@@ -79,18 +79,18 @@
     "q": "1.4.1",
     "react": "16.0.0",
     "react-addons-test-utils": "16.0.0-alpha.3",
-    "react-dnd-test-backend": "^2.5.4",
+    "react-dnd-test-backend": "~2.5.4",
     "react-dom": "16.0.0",
     "react-hot-loader": "3.0.0-beta.7",
     "react-redux": "5.0.6",
     "react-router": "3.2.0",
     "react-router-redux": "4.0.2",
-    "react-test-renderer": "^16.0.0",
+    "react-test-renderer": "~16.0.0",
     "redux": "3.0.5",
     "redux-thunk": "1.0.0",
     "reselect": "2.5.1",
     "rimraf": "2.5.2",
-    "run-sequence": "^2.2.0",
+    "run-sequence": "~2.2.0",
     "sass-loader": "3.1.2",
     "selenium-standalone": "5.10.0",
     "style-loader": "0.13.0",
@@ -108,8 +108,8 @@
   "peerDependencies": {
     "clone": "1.x",
     "reselect": "2.x",
-    "react": "^15.3.0 || ^16.0.0",
-    "react-dom": "^15.3.0 || ^16.0.0",
+    "react": "^15.0.0 || ^16.0.0",
+    "react-dom": "^15.0.0 || ^16.0.0",
     "validator": "5.2.0"
   },
   "engines": {
