--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -45,6 +45,7 @@
     "chalk": "1.1.3",
     "clean-webpack-plugin": "0.1.8",
     "clone": "1.0.2",
+    "color": "^2.0.1",
     "copy-webpack-plugin": "1.1.1",
     "css-loader": "0.23.1",
     "es6-promise": "3.2.1",
