UIP-1484 Conform SCSS to stylelint rules and add stylelint to verify process
Change-Id: Iae41c4c63fd0cff3ed31da611d29936112ab204c

--- a/packages/ui-library/.stylelintrc
+++ b/packages/ui-library/.stylelintrc
@@ -1,6 +1,6 @@
 {
     "ignoreFiles":"./src/css/reset.scss",
-    "defaultSeverity": "warning",
+    "defaultSeverity": "error",
     "extends": "stylelint-config-standard",
     "rules": {
 
