--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "babel-runtime": "6.26.0",
     "classnames": "1.2.1",
+    "clone": "1.0.2",
     "core-js": "2.5.1",
     "exif-js": "2.1.1",
     "fbjs": "0.4.0",
@@ -45,7 +46,6 @@
     "babel-preset-react": "6.24.1",
     "chalk": "1.1.3",
     "clean-webpack-plugin": "0.1.8",
-    "clone": "1.0.2",
     "color": "^2.0.1",
     "copy-webpack-plugin": "1.1.1",
     "css-loader": "0.23.1",
@@ -108,11 +108,8 @@
     "webpack-dev-server": "1.14.1"
   },
   "peerDependencies": {
-    "clone": "1.x",
     "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0",
-    "reselect": "2.x",
-    "validator": "5.2.0"
+    "react-dom": "^15.0.0 || ^16.0.0"
   },
   "engines": {
     "node": ">= 4.3.x",
