--- a/packages/ui-library/.babelrc
+++ b/packages/ui-library/.babelrc
@@ -6,6 +6,7 @@
     "plugins": [
         "transform-runtime",
         "transform-class-properties",
+        "transform-object-rest-spread",
 		"add-module-exports"
     ]
 }
