New dropdown components

--- a/packages/end-user/package.json
+++ b/packages/end-user/package.json
@@ -14,7 +14,8 @@
         "prop-types": "^15.6.0",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
-        "react-router": "^4.2.0"
+        "react-router": "^4.2.0",
+        "recompose": "^0.27.1"
     },
     "devDependencies": {
         "autoprefixer": "^8.0.0",
