--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -55,7 +55,7 @@
     "babel-preset-react": "6.24.1",
     "chalk": "1.1.3",
     "clean-webpack-plugin": "0.1.8",
-    "color": "^2.0.1",
+    "color": "3.1.0",
     "copy-webpack-plugin": "1.1.1",
     "css-loader": "0.23.1",
     "enzyme": "3.7.0",
