--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -4,10 +4,12 @@
   "description": "A UI library made of reusable React components, util functions and static assets (including CSS, Fonts, and Icons)",
   "author": "UX Front-End Development Team",
   "license": "ISC",
-  "files": [ "lib" ],
+  "files": [
+    "lib"
+  ],
   "main": "./lib/MainIndex.js",
   "publishConfig": {
-    "registry":"https://art01.corp.pingidentity.com/artifactory/api/npm/npm-virtual/"
+    "registry": "https://art01.corp.pingidentity.com/artifactory/api/npm/npm-virtual/"
   },
   "repository": {
     "type": "git",
@@ -56,6 +58,8 @@
     "color": "^2.0.1",
     "copy-webpack-plugin": "1.1.1",
     "css-loader": "0.23.1",
+    "enzyme": "3.7.0",
+    "enzyme-adapter-react-16": "1.6.0",
     "es6-promise": "3.2.1",
     "eslint": "1.10.3",
     "eslint-loader": "1.3.0",
@@ -150,6 +154,7 @@
       "/dist/"
     ],
     "setupFiles": [
+      "<rootDir>/src/util/enzymeSetup.js",
       "<rootDir>/src/util/polyfills.js"
     ]
   },
