preparing for automatic npm publishing
Change-Id: I5ea7c3b28e0d9a0fd9aa5369b47ee7dbee6f77d6

--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -4,7 +4,11 @@
   "description": "A UI library made of reusable React components, util functions and static assets (including CSS, Fonts, and Icons)",
   "author": "UX Front-End Development Team",
   "license": "ISC",
-  "private": true,
+  "files": [ "lib" ],
+  "main": "./lib/MainIndex.js",
+  "publishConfig": {
+    "registry":"https://art01.corp.pingidentity.com/artifactory/api/npm/npm-virtual/"
+  },
   "repository": {
     "type": "git",
     "url": "https://hg-od01.corp.pingidentity.com/r/gitweb?p=ui-library.git;a=tree;h=HEAD;hb=HEAD"
