--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -7,7 +7,6 @@
   "files": [
     "lib"
   ],
-  "main": "./lib/MainIndex.js",
   "publishConfig": {
     "registry": "https://art01.corp.pingidentity.com/artifactory/api/npm/npm-virtual/"
   },
@@ -78,7 +77,7 @@
     "http-server": "0.9.0",
     "isomorphic-fetch": "~2.2.1",
     "jasmine": "2.4.1",
-    "jest-cli": "21.2.1",
+    "jest-cli": "~23.6.0",
     "jsdoc": "3.5.5",
     "jsdoc-babel": "~0.3.0",
     "jsdoc-jsx": "0.1.0",
