UIP-1751: Added template dictionary generation script
Change-Id: I1e4d6591dc467cb146400e81559e2a1d87e11273

--- a/packages/ui-library/.gitignore
+++ b/packages/ui-library/.gitignore
@@ -29,3 +29,6 @@ yarn-error.log
 
 selenium-standalone.log*
 http-server.log
+
+# Programatically generated internal files
+src/demo/core/templates.json
