--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -28,6 +28,7 @@
     "moment": "2.22.2",
     "moment-range": "1.0.5",
     "moment-timezone": "0.5.5",
+    "prop-types": "^15.5.7",
     "raf": "3.4.0",
     "re-mutable": "1.1.1",
     "react-color": "2.13.8",
@@ -57,12 +58,14 @@
     "chalk": "1.1.3",
     "clean-webpack-plugin": "0.1.8",
     "copy-webpack-plugin": "1.1.1",
+    "create-react-class": "^15.6.3",
     "css-loader": "0.23.1",
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.6.0",
     "es6-promise": "3.2.1",
-    "eslint": "1.10.3",
+    "eslint": "^2.0.0",
     "eslint-loader": "1.3.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-react": "4.1.0",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
@@ -154,7 +157,7 @@
       "/dist/"
     ],
     "setupFiles": [
-      "<rootDir>/src/util/enzymeSetup.js",
+      "<rootDir>/src/devUtil/enzymeSetup.js",
       "<rootDir>/src/util/polyfills.js"
     ]
   },
