UIP-1896 : wire up the old wizard to the existing ButtonBar save-tooltip functionality
Change-Id: I6945f430cb60b791d34135abfb2071effe9400b1

--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -158,8 +158,8 @@
       "/dist/"
     ],
     "setupFiles": [
-      "<rootDir>/src/devUtil/enzymeSetup.js",
-      "<rootDir>/src/util/polyfills.js"
+      "<rootDir>/src/util/polyfills.js",
+      "<rootDir>/src/devUtil/enzymeSetup.js"
     ]
   },
   "scripts": {
