--- a/packages/ui-library/.stylelintrc
+++ b/packages/ui-library/.stylelintrc
@@ -12,12 +12,13 @@
         "no-unknown-animations": true,
 
         "at-rule-empty-line-before": [ "always", {
-            "except": ["blockless-group", "first-nested"]
+            "except": ["blockless-group", "first-nested"],
+            "ignoreAtRules": [ "else" ]
         }],
         "at-rule-name-case": "lower",
         "at-rule-name-space-after": "always",
         "at-rule-no-unknown": [ true, {
-            "ignoreAtRules": [ "for", "each", "if", "include", "extend", "mixin", "warn", "function", "return", "content" ]
+            "ignoreAtRules": [ "for", "each", "if", "else", "include", "extend", "mixin", "warn", "function", "return", "content" ]
         }],
         "at-rule-semicolon-newline-after": "always",
 
