--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -83,7 +83,7 @@
     "http-server": "0.9.0",
     "isomorphic-fetch": "~2.2.1",
     "jasmine": "2.4.1",
-    "jest-cli": "21.2.1",
+    "jest-cli": "~23.6.0",
     "jsdoc": "3.5.5",
     "jsdoc-babel": "~0.3.0",
     "jsdoc-jsx": "0.1.0",
