add ci flag to jest to remedy current issue with post builds failing on the cached snapshot
Change-Id: Ie39a1cd291876191e943f4aea494f36b18ded1c2

--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -178,7 +178,7 @@
     "jslint": "eslint --ext .js,.jsx .",
     "stylelint": "stylelint \"src/css/**/*.scss\" --config ./.stylelintrc --syntax scss",
     "jest": "jest && node ./clean-after.js",
-    "coverage": "jest --coverage && node ./clean-after.js",
+    "coverage": "jest --coverage --ci && node ./clean-after.js",
     "test": "jest",
     "verify": "npm run jslint && npm run stylelint && npm run test",
     "preintegration": "npm run clean-selenium-log & selenium-standalone install && selenium-standalone start -- -log ./selenium-standalone.log & http-server ./build > ./http-server.log 2>&1 & npm run pack",
