UIP-1857 Update proxima nova include
Change-Id: I768c0e8e095b36d11a7c5d45050e210318d0717f

--- a/packages/ui-library/.stylelintrc
+++ b/packages/ui-library/.stylelintrc
@@ -11,10 +11,7 @@
         "no-invalid-double-slash-comments": true,
         "no-unknown-animations": true,
 
-        "at-rule-empty-line-before": [ "always", {
-            "except": ["blockless-group", "first-nested"],
-            "ignoreAtRules": [ "else" ]
-        }],
+        "at-rule-empty-line-before": null,
         "at-rule-name-case": "lower",
         "at-rule-name-space-after": "always",
         "at-rule-no-unknown": [ true, {
