--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -27,6 +27,7 @@
     "fbjs": "0.4.0",
     "fix-orientation": "0.0.2",
     "highlight.js": "^9.13.1",
+    "libphonenumber-js": "~1.7.7",
     "moment": "2.22.2",
     "moment-range": "1.0.5",
     "moment-timezone": "0.5.5",
