UIP-2128: Fixed NPM integrity checksum errors
Change-Id: I3bcc338f3d46cb0a4dbdef05d0f322f21c1e339b

--- a/packages/ui-library/Makefile
+++ b/packages/ui-library/Makefile
@@ -181,8 +181,8 @@ log-config:
 	@echo "Coverage status code: $(COVERAGE_STATUS_CODE)"
 
 install-node-npm:
-	npm prune
-	npm install
+	npm cache clean --force
+	npm install --no-shrinkwrap --update-binary
 	npm rebuild node-sass
 
 clean-mvn:
