--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -40,7 +40,7 @@
     "react-dnd-html5-backend": "2.5.4",
     "react-portal": "4.2.0",
     "react-tooltip": "3.8.4",
-    "recharts": "1.0.0-beta.0",
+    "recharts": "1.4.3",
     "reselect": "2.5.1",
     "underscore": "1.8.3",
     "uuid": "2.0.3",
