--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -77,6 +77,7 @@
     "gulp": "~3.9.1",
     "gulp-babel": "~7.0.0",
     "gulp-debug": "~3.1.0",
+    "gulp-export": "^2.2.0",
     "gulp-flatten": "~0.3.1",
     "gulp-rename": "^1.4.0",
     "gulp-revert-path": "~1.2.1",
@@ -170,12 +171,14 @@
   "scripts": {
     "pack": "webpack --progress --colors --config webpack.config.js",
     "package-library": "gulp package-lib",
+    "package-index": "gulp package-index",
     "pack-landing": "webpack --progress --colors --config webpack.landing.config.js",
     "webpack-start-landing": "webpack-dev-server --content-base hosting/ -d --hot --port 8082 --host 0.0.0.0 --inline --progress --colors --config webpack.landing.config.js",
     "webpack-start": "webpack-dev-server -d --hot --host 0.0.0.0 --inline --progress --colors --config webpack.dev.config.js",
     "start": "npm run doc && npm run webpack-start",
     "start-w-doc": "npm run doc && npm run webpack-start",
     "doc": "jsdoc -c ./jsdoc.json",
+    "test-w-docker": "./node_modules/.bin/wdio wdio.dev.conf.js",
     "jslint": "eslint --ext .js,.jsx .",
     "stylelint": "stylelint \"src/css/**/*.scss\" --config ./.stylelintrc --syntax scss",
     "jest": "jest && node ./clean-after.js",
