UIP-2212: Alternative import method
Change-Id: Id3358239af9faaffb35604c46f4624a73b305014

--- a/packages/ui-library/Makefile
+++ b/packages/ui-library/Makefile
@@ -112,6 +112,7 @@ define package
 	mkdir -p dist/ui-library/examples
 	cp -rf lib dist/ui-library
 	cp -f package.json dist/ui-library
+	cp -f index.js dist/ui-library
 	tar -czf dist/ui-library-$(1).tar.gz --directory=dist ui-library
 endef
 
