--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -131,7 +131,8 @@
     "wdio-static-server-service": "^1.0.1",
     "webdriverio": "^4.14.0",
     "webpack": "1.12.14",
-    "webpack-dev-server": "1.14.1"
+    "webpack-dev-server": "1.14.1",
+    "zxcvbn": "^4.4.2"
   },
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0",
