UIP-2144: Updated Webpack, Babel, and Core-JS
Change-Id: Ib920f5205d3dbf2e4d97337b9064bae1027d5c33

--- a/packages/ui-library/.babelrc
+++ b/packages/ui-library/.babelrc
@@ -1,12 +1,32 @@
 {
-	"presets": [
-        "env",
-        "react"
+    "presets": [
+        [
+            "@babel/preset-env",
+            {
+                "modules": "commonjs"
+            },
+        ],
+        "@babel/preset-react"
     ],
     "plugins": [
-        "transform-runtime",
-        "transform-class-properties",
-        "transform-object-rest-spread",
-		"add-module-exports"
-    ]
+        "@babel/plugin-proposal-class-properties",
+        [
+            "transform-es2015-spread",
+            {
+                "loose": true
+            }
+        ],
+        [
+            "add-module-exports",
+            {
+                "addDefaultProperty": true
+            }
+        ],
+        [
+            "@babel/plugin-transform-runtime",
+            {
+                "corejs": 3
+            }
+        ]
+    ],
 }
